# Advent-Of-Code-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Advent-Of-Code-2025.cpp  Advent-Of-Code-2025.h
src/solutions/day_1/: Day1.cpp  Day1.h
src/solutions/day_11/: Day11.cpp  Day11.h
src/solutions/day_2/: Day2.cpp  Day2.h
src/solutions/day_3/: Day3.cpp  Day3.h
src/solutions/day_4/: Day4.cpp  Day4.h
src/solutions/day_5/: Day5.cpp  Day5.h
src/solutions/day_6/: Day6.cpp  Day6.h
src/solutions/day_7/: Day7.cpp  Day7.h
src/solutions/day_8/: Day8.cpp  Day8.h
src/solutions/day_9/: Day9.cpp  Day9.h
src/utils/: EmbeddedFile.cpp  EmbeddedFile.h  Memoization.cpp  Memoization.h
tests/EmbeddedFile/: EmbeddedFile_Tests.cpp
tests/day_9/: Day9_Tests.cpp
